# scan-to-map-scan-matching-tests

./: CMakeLists.txt  README.md
datasets/aces/: dataset_0.txt  dataset_1.txt  dataset_10.txt  dataset_100.txt  dataset_1000.txt  dataset_1001.txt  dataset_1002.txt  dataset_1003.txt  dataset_1004.txt  dataset_1005.txt  dataset_1006.txt  dataset_1007.txt  dataset_1008.txt  dataset_1009.txt  dataset_101.txt  dataset_1010.txt  dataset_1011.txt  dataset_1012.txt  dataset_1013.txt  dataset_1014.txt  dataset_1015.txt  dataset_1016.txt  dataset_1017.txt  dataset_1018.txt  dataset_1019.txt  dataset_102.txt  dataset_1020.txt  dataset_1021.txt  dataset_1022.txt  dataset_1023.txt  dataset_1024.txt  dataset_1025.txt  dataset_1026.txt  dataset_1027.txt  dataset_1028.txt  dataset_1029.txt  dataset_103.txt  dataset_1030.txt  dataset_1031.txt  dataset_1032.txt  (+7334 more)
datasets/fr079/: dataset_0.txt  dataset_1.txt  dataset_10.txt  dataset_100.txt  dataset_1000.txt  dataset_1001.txt  dataset_1002.txt  dataset_1003.txt  dataset_1004.txt  dataset_1005.txt  dataset_1006.txt  dataset_1007.txt  dataset_1008.txt  dataset_1009.txt  dataset_101.txt  dataset_1010.txt  dataset_1011.txt  dataset_1012.txt  dataset_1013.txt  dataset_1014.txt  dataset_1015.txt  dataset_1016.txt  dataset_1017.txt  dataset_1018.txt  dataset_1019.txt  dataset_102.txt  dataset_1020.txt  dataset_1021.txt  dataset_1022.txt  dataset_1023.txt  dataset_1024.txt  dataset_1025.txt  dataset_1026.txt  dataset_1027.txt  dataset_1028.txt  dataset_1029.txt  dataset_103.txt  dataset_1030.txt  dataset_1031.txt  dataset_1032.txt  (+4894 more)
datasets/intel/: dataset_0.txt  dataset_1.txt  dataset_10.txt  dataset_100.txt  dataset_1000.txt  dataset_10000.txt  dataset_10001.txt  dataset_10002.txt  dataset_10003.txt  dataset_10004.txt  dataset_10005.txt  dataset_10006.txt  dataset_10007.txt  dataset_10008.txt  dataset_10009.txt  dataset_1001.txt  dataset_10010.txt  dataset_10011.txt  dataset_10012.txt  dataset_10013.txt  dataset_10014.txt  dataset_10015.txt  dataset_10016.txt  dataset_10017.txt  dataset_10018.txt  dataset_10019.txt  dataset_1002.txt  dataset_10020.txt  dataset_10021.txt  dataset_10022.txt  dataset_10023.txt  dataset_10024.txt  dataset_10025.txt  dataset_10026.txt  dataset_10027.txt  dataset_10028.txt  dataset_10029.txt  dataset_1003.txt  dataset_10030.txt  dataset_10031.txt  (+13591 more)
datasets/mit_csail/: dataset_0.txt  dataset_1.txt  dataset_10.txt  dataset_100.txt  dataset_1000.txt  dataset_1001.txt  dataset_1002.txt  dataset_1003.txt  dataset_1004.txt  dataset_1005.txt  dataset_1006.txt  dataset_1007.txt  dataset_1008.txt  dataset_1009.txt  dataset_101.txt  dataset_1010.txt  dataset_1011.txt  dataset_1012.txt  dataset_1013.txt  dataset_1014.txt  dataset_1015.txt  dataset_1016.txt  dataset_1017.txt  dataset_1018.txt  dataset_1019.txt  dataset_102.txt  dataset_1020.txt  dataset_1021.txt  dataset_1022.txt  dataset_1023.txt  dataset_1024.txt  dataset_1025.txt  dataset_1026.txt  dataset_1027.txt  dataset_1028.txt  dataset_1029.txt  dataset_103.txt  dataset_1030.txt  dataset_1031.txt  dataset_1032.txt  (+1948 more)
datasets/mit_killian/: dataset_0.txt  dataset_1.txt  dataset_10.txt  dataset_100.txt  dataset_1000.txt  dataset_10000.txt  (+17474 more)
include/: cs2msm.h  dataset_utils.h  defines.h  dft_utils.h  dump.h  find.h  gpm.h  intersections.h  match.h  noise.h  rotation.h  s2msm.h  scan_completion.h  structs.h  translation.h  utils.h
src/: dataset_utils.cpp  intersections.cpp  match.cpp  s2msm.cpp  s2msm_node.cpp  utils.cpp
